# toolwright

./: .gitignore  .mcp.json  AUDIT_REPORT.md  CAPABILITIES.md  CHANGELOG.md  CLAUDE.md  DOGFOOD_REPORT.md  LICENSE  README.md  ROADMAP.md  TODOS.md  cli-surface.md  dogfood-checkpoint.md  findings.md  findings_viral_dev_tools.md  mint-output.txt  outputscript.sh  pyproject.toml  quickstart-actual-output.md  server.json  task_plan.md  toolwright-spec.md
.github/workflows/: ci.yml  publish.yml
blog/: walls-vs-immune-systems.md
demos/outputs/: demo.webm  hero.webm  quickstart.webm
demos/screenplays/: hero.yaml  kill_cycle.yaml  quickstart.yaml
demos/tapes/: demo.tape  hero.tape  quickstart.tape
docs/: architecture.md  capture-otel.md  ci-gate-policy.md  compatibility-matrix.md  dogfood-findings.md  evidence-redaction-spec.md  glossary.md  known-limitations.md  playbook-spec.md  positioning.md  publishing.md  scopes.md  threat-model-boundaries.md  troubleshooting.md  user-guide.md  verification-spec.md
docs/archive/: NORTH_STAR.md  OPENAI_VIEWPOINTS.md  README.md  SPEC-historical.md  findings.md  manifesto.md  progress.md  task_plan.md  why_cask_exists.md
docs/confidence-kit/: ARCHITECTURE.md  GOLDEN_PATH.md  INVARIANTS.md
docs/decisions/: 001-auth-env-vars.md
docs/launch/: readme-draft.md  show-hn.md  twitter-thread.md
docs/plans/: 2026-02-22-readme-funnel-design.md  2026-02-22-readme-funnel-impl.md  2026-02-22-toolpack-display-names.md  2026-02-22-tui-system-design.md  2026-03-01-dogfood-blockers-design.md  2026-03-01-dogfood-blockers-impl.md  2026-03-01-rule-templates-and-recipes-design.md  2026-03-01-rule-templates-and-recipes-impl.md  2026-03-01-tool-groups-design.md  2026-03-01-tool-groups-plan.md
docs/quickstarts/: any-rest-api.md  github.md
docs/releases/: README.md  v0.1.0-alpha.1.md  v0.1.0-alpha.2.md  v0.1.0-alpha.3.md  v0.1.0-alpha.4.md
docs/specs/: overlay-feasibility.md
dogfood/: DOGFOOD_REPORT.md  FRICTION_AUDIT_ERRORS.md  FRICTION_LOG.md  META_SERVER_DOGFOOD.md  friction_audit.sh  test_meta_server.py  test_meta_server.sh
dogfood/github/: .gitignore  DOGFOOD.md  curate_spec.py  spec-drift-summary.json  spec-drift.diff  test_kill_lifecycle.sh  test_rules.sh  toolpack.yaml  vars.env
dogfood/github/artifact/: baseline.json  policy.yaml  toolsets.yaml
dogfood/jira/: .gitignore  DOGFOOD.md  curate_spec.py  jira-api-scoped.yaml  toolpack.yaml  toolwright.lock.yaml  vars.env  verify_policy.py
dogfood/petstore/: DOGFOOD_HEAL.md  test_heal.sh
scripts/: cleanroom_golden_path.sh  flagship_smoke_suite.py  magic_moment_ci.sh  mcp_smoke.py  prove_twice_demo.py  scan_secrets.sh
tests/: __init__.py  conftest.py  helpers.py  test_action_handlers.py  test_aggregator_list_body.py  test_approval.py  test_approval_root_resolution.py  test_approval_signer_readonly_verify.py  test_approval_signing.py  test_approve_resign.py  test_approve_snapshot.py  test_auth.py  test_auth_check.py  test_auth_detection.py  test_auth_env_var.py  test_auth_header_name.py  test_auth_nonleakage.py  test_auth_per_host.py  test_auth_profiles.py  test_auth_requirements_model.py  test_auth_security.py  test_auth_serve_prompt.py  test_auth_setup.py  test_auth_startup_warning.py  test_auth_utils.py  test_baseline_storage.py  test_body_wrapping.py  test_breaker_recovery.py  test_budget_double_counting.py  test_bundle_cli.py  test_capability_expansion_integration.py  test_capture_cli.py  test_capture_hosts_help.py  test_check_ci_snapshot.py  test_circuit_breaker.py  test_circuit_breaker_mcp_integration.py  test_cli_transport.py  test_cli_url_validation.py  test_compile.py  test_compile_baselines.py  (+254 more)
tests/e2e/: amazon_capture.py  dummyjson_capture.py  ebay_capture.py  run_all_captures.sh  stockx_capture.py  target_capture.py  tcgplayer_capture.py  walmart_capture.py
tests/fixtures/: diff_github_md_snapshot.md  mini-api.json  tools_minimal.json
toolwright/: __init__.py  __main__.py  branding.py
toolwright/assets/: __init__.py
toolwright/cli/: __init__.py  approve.py  auth.py  auth_setup.py  bundle.py  capture.py  command_helpers.py  commands_approval.py  commands_auth.py  commands_build.py  commands_create.py  commands_governance.py  commands_groups.py  commands_kill.py  commands_mcp.py  commands_onboarding.py  commands_packaging.py  commands_recipes.py  commands_repair.py  commands_rules.py  commands_runtime.py  commands_snapshots.py  commands_status.py  commands_tokens.py  commands_use.py  commands_validation.py  commands_watch.py  commands_workflow.py  commands_wrap.py  compile.py  compliance.py  config.py  confirm.py  demo.py  doctor.py  drift.py  enforce.py  init.py  lint.py  main.py  (+11 more)
toolwright/cli_transport/: __init__.py  adapter.py  serve.py
toolwright/core/: __init__.py  config_snippets.py  network_safety.py  risk_keywords.py  score.py  token_estimator.py  toolpack.py  why.py  work_items.py
toolwright/mcp/: __init__.py  _compat.py  action_handlers.py  auth.py  description.py  event_store.py  events.py  http_transport.py  meta_server.py  observe.py  pipeline.py  runtime.py  server.py  startup_card.py
toolwright/models/: __init__.py  baseline.py  capture.py  decision.py  drift.py  endpoint.py  flow.py  groups.py  heal.py  overlay.py  plan.py  policy.py  probe_template.py  proposal.py  reconcile.py  repair.py  rule.py  scope.py  shape.py  verify.py  work_item.py
toolwright/overlay/: __init__.py  config.py  connection.py  discovery.py  lifecycle.py  normalizer.py  server.py  source_locator.py
toolwright/recipes/: github.yaml  loader.py  notion.yaml  shopify.yaml  slack.yaml  stripe.yaml
toolwright/rules/: loader.py
toolwright/storage/: __init__.py  filesystem.py
toolwright/ui/: __init__.py  console.py  context.py  discovery.py  echo.py  ops.py  policy.py  prompts.py  runner.py  tables.py
toolwright/utils/: __init__.py  auth.py  canonical.py  config.py  config_file.py  deps.py  digests.py  dotenv.py  files.py  headers.py  locks.py  mcp_clients.py  naming.py  resolve.py  runtime.py  schema_version.py  state.py  text.py  token_count.py
(+170 files in other folders)
